# M3Uconvert

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  M3Uconvert.sln  README.md
M3Uconvert/: M3Uconvert.rc  M3Uconvert.vcxproj  M3Uconvert.vcxproj.filters  MainWindow.cpp  MainWindow.h  m3uconvert.qrc  m3uconvert.ui  main.cpp
